# bulletsim_source

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  make_eclipse_project.sh
data/bagfiles/: README  README~
data/boundary/: README  README~
data/transforms/: README  README~  kinect1_ir_optical_frame
lib/: CMakeLists.txt  CMakeLists.txt~
lib/bullet-2.79/: CMakeLists.txt
lib/cpd/: CMakeLists.txt  CMakeLists.txt~
lib/cpd/include/cpd/: transform.hpp
lib/cpd/src/: normalization.cpp
lib/fgt/: CMakeLists.txt  CMakeLists.txt~
lib/haptics/: CMakeLists.txt
lib/log4cplus-1.1.0-rc3/: CMakeLists.txt
lib/osgBullet-3.0/: CMakeLists.txt
lib/osgBullet-3.0/osgbCollision/: Version.h.in  Version.h~
lib/osgWorks-3.0/: CMakeLists.txt  CMakeLists.txt~
lib/osgWorks-3.0/osgwTools/: Version.h
lib/tetgen-1.4.3/: CMakeLists.txt
src/: CMakeLists.txt  CMakeLists.txt~  LICENSE  LICENSE~
src/bulletsim_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/bulletsim_msgs/launch/: kinect1.launch  kinect12.launch  kinect2.launch  play_cloud.launch
src/bulletsim_python/: CMakeLists.txt  package.xml
src/bulletsim_python/src/tracking_initialization/scripts/: initialization_service.py
src/clouds/: CMakeLists.txt  CMakeLists.txt~  _geom.h  cloud_merger_node.cpp  cloud_ops.cpp  cloud_ops.h  define_boundary.cpp  get_chessboard_pose.cpp  get_chessboard_pose.h  get_table2.cpp  get_table_server.cpp  grabcut.cpp  kinect_alignment_node.cpp  kinect_calibrate_node.cpp  pcd_picker.cpp  pcl_typedefs.h  precomp.hpp  preprocessor_color_node.cpp  preprocessor_depth_node.cpp  preprocessor_node.cpp  preprocessor_segmentation_node.cpp  save_cloud_node.cpp  simple_preprocessor_node.cpp  utils_cv.cpp  utils_pcl.cpp  utils_pcl.h  utils_ros.cpp  utils_ros.h
src/clouds/sandbox/: cloud_adjuster_node.cpp
src/comm/: CMakeLists.txt
src/phasespace/: CMakeLists.txt  CMakeLists.txt~  phasespace_cloud_viz.cpp  phasespace_kinect_calibration.cpp  phasespace_publisher.cpp  phasespace_subscriber.cpp  test_phasespace.cpp  tf_phasespace_robot.cpp
src/python/: CMakeLists.txt  algorithm_common.cpp  cam_sync.cpp  config_tracking.cpp  feature_extractor.cpp  feature_extractor.h  physics_tracker.cpp  physics_tracker.h  python_cpdsim_bridge.cpp  tracked_cloth.cpp  tracked_compound.cpp  tracked_object.h  tracked_rope.cpp  tracked_sponge.cpp  tracker_node_CPD.cpp
src/simulation/: CMakeLists.txt  CMakeLists.txt~  config_bullet.cpp  config_bullet.h  plotting.cpp  rope.cpp  rope.h  simplescene.cpp  simplescene.h  util.h
src/tracking/: CMakeLists.txt  CMakeLists.txt~  config_tracking.cpp  config_tracking.h  feature_extractor.cpp  feature_extractor.h  hand_tracker_node.cpp  initialization.cpp  physics_tracker.cpp  physics_tracker.h  simulated_hand_tracker.cpp  simulated_tracker.cpp  tracked_box.cpp  tracked_cloth.cpp  tracked_object.h  tracked_rope.cpp  tracked_sponge.cpp  tracked_towel.cpp  tracker_node.cpp  tracker_node_CPD.cpp  tracker_phasespace_node.cpp
src/utils/: CMakeLists.txt  CMakeLists.txt~  config.cpp  config.h  conversions.cpp  conversions.h  cvmat.cpp  cvmat.h
