<?xml version="1.0"?>
<package>
  <name>bulletsim_msgs</name>
  <version>0.0.0</version>
  <description>The bulletsim_msgs package</description>
  <maintainer email="tt@todo.todo">tt</maintainer>
  <license>TODO</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend> 
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
